fix: don't overlap search bar

--- a/components/css/themes/common-variables.less
+++ b/components/css/themes/common-variables.less
@@ -51,6 +51,10 @@
 @box-shadow-4: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 @box-shadow-5: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 
+/* Z-indices */
+@top-bar-content: 55;
+@top-bar-nowrap: 54;
+
 /* Footer */
 @footer-background-color: #404040;
 @footer-text-color: #adadad;
